# mcp-council

./: .gitignore  Cargo.toml  LICENSE  QUICKSTART.md  README.md  WORKFLOW.md  mcp.json.example
commands/cc/: finalize.md  first_answer.md  peer_review.md  save_review.md  save_summary.md  summarize.md
src/: cli_runner.rs  main.rs  mcp.rs
src/tools/: finalize.rs  first_answer.rs  mod.rs  peer_review.rs  save_review.rs  save_summary.rs  stage1_save.rs  summarize.rs
